--- a/Untitled27.ipynb
+++ b/Untitled27.ipynb
@@ -71,7 +71,7 @@
         "\n",
         "# csv 파일로 로드한 정보 저장 (전처리 필요)\n",
         "items = pd.DataFrame(interest_rate_list)\n",
-        "items.columns = ['변경일자', '기준금리']\n",
+        "items.columns = ['', '기준금리']\n",
         "items.to_csv('기준금리정보.csv', index=False, encoding=\"euc-kr\")"
       ]
     }
